# secure-enterprise-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  seed.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 42b37ce325bd_add_roles_and_update_users.py  687b4ba84ac7_add_canonical_document_id_and_dedup_.py  74a0da12ed52_add_file_hash_to_documents.py  b317633fa436_add_canonical_document_id_to_documents.py  b684d8d4c2c1_add_refresh_token_to_user.py  e2930b41b777_add_refresh_token_to_user.py
app/: config.py  dependencies.py  main.py  metrics.py  rate_limit.py
app/api/: router.py
app/api/endpoints/: admin.py  auth.py  health.py  ingest.py  query.py
app/auth/: jwt_handler.py  rbac.py  security.py
app/db/: audit_log.py  models.py  session.py
app/graph/: graph_builder.py  nodes.py  state.py
app/ingestion/: chunker.py  deduplicator.py  parser.py  pipeline.py
app/llm/: prompts.py  provider.py
app/logging_config/: setup.py
app/masking/: demasker.py  mapping_store.py  presidio_engine.py  regex_patterns.py
app/vectorstore/: embedder.py  qdrant_client.py  retriever.py
prometheus/: prometheus.yml
tests/: conftest.py  test_api_ingest.py  test_auth.py  test_dependencies.py  test_e2e.py  test_graph.py  test_ingestion.py  test_logging.py  test_masking.py  test_qdrant_client.py  test_retriever.py
